<resources>
    <string name="app_name">51风流</string>
    <string name="lorem_ipsum"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris quam augue, molestie vel mi eget, fringilla vulputate velit. Quisque cursus turpis a ipsum venenatis tempus. Integer luctus erat id libero pharetra posuere. Nam vel nulla in urna pharetra varius nec sit amet nunc. Nulla ac tincidunt eros. Proin ac nulla metus. Aenean dictum risus fringilla mi cursus euismod. Morbi a risus leo. Quisque condimentum vehicula dui et sodales.

Phasellus in leo massa. Aliquam malesuada, enim nec auctor posuere, quam sem malesuada dui, eget venenatis lorem erat eu diam. Morbi urna nibh, finibus ut nisl id, tristique consequat ipsum. Etiam vel rutrum enim. Duis tristique dui quam, nec egestas mauris rhoncus vitae. Fusce ultrices vulputate lectus a eleifend. Integer quis lacinia felis. Fusce ultrices, metus eu pharetra maximus, magna enim hendrerit enim, vitae feugiat nisl elit et odio. </string>

    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="quit">退出</string>
    <string name="exit">@string/quit</string>

    <string name="stateful_default_loading">加载中…</string>
    <string name="stateful_default_error">加载失败</string>
    <string name="stateful_default_empty">暂无数据</string>
    <string name="stateful_default_retry">重试</string>

    <string name="default_error">出错了，请稍后重试</string>

    <string name="intro_anti_fraud">本站为信息分享平台，并不对寻欢经历负责，请注意个人防范。凡是有要求路费/上门/红包/定金/保证金/照片验证/视频验证/提前付费等类似行为的都是骗子，同时也请注意任何形式的推荐办卡行为、引导下载APP行为，请勿上当受骗。碰到有问题的信息，请及时举报给我们删除信息。如果发布的信息涉及个人隐私，也请及时举报，我们会核实后第一时间帮你删除处理。</string>
    <string name="zuixin_dizhi">最新地址</string>
    <string name="zuixin_xinxi">最新信息</string>
    <string name="shangjia">商家</string>
    <string name="fabu_xinxi">发布信息</string>
    <string name="vip">VIP升级</string>
    <string name="shouji_app">手机APP</string>
    <string name="jifen_guize">积分规则</string>

    <string name="intro_price">价格：</string>
    <string name="price_all_night_format">%1$s\t包夜：\t%2$s</string>
    <string name="qq_format">QQ：\t%1$s</string>
    <string name="wechat_format">微信：\t%1$s</string>
    <string name="telegram_format">Telegram：\t%1$s</string>
    <string name="yuni_format">与你号：\t%1$s</string>
    <string name="phone_format">手机：\t%1$s</string>
    <string name="address_format">地址：\t%1$s</string>

    <string name="intro_search_result_format">\"%1$s\"的搜索结果</string>
    <string name="vip_welcome">尊敬的VIP，欢迎登录</string>
    <string name="normal_welcome">欢迎登录</string>
    <string name="permanent">永久</string>
    <string name="upgrade_prompt">立即升级，轻松风流 >>></string>
    <string name="refresh_prompt">[已经升级？点击刷新]</string>
    <string name="my_favorite">我的收藏</string>
    <string name="confirm_report">确认举报</string>
    <string name="vip_required_message">你需要VIP才能继续查看联系方式。</string>
    <string name="upgrade_vip_now">立即升级VIP</string>
    <string name="login_required_message">你需要登录才能继续查看联系方式。</string>
    <string name="login_now">立即登录</string>
    <string name="logout_confirmation_message">确定要退出登录吗？</string>
    <string name="normal_member">普通会员</string>
    <string name="vip_member">VIP会员</string>
    <string name="large_image_check_message">仅积分购买此联系方式的用户和VIP会员可使用图片放大功能，请使用积分购买或者升级VIP会员</string>
</resources>