<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_without_title_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="6dp"
    android:paddingTop="8dp"
    android:paddingEnd="6dp"
    android:paddingBottom="4dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cornered_surface_padding"
        android:lineSpacingExtra="5dp"
        android:text="@string/intro_anti_fraud"
        android:textColor="@color/text_default"
        android:textSize="@dimen/text_default"
        tools:ignore="SpUsage" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cornered_surface_no_padding"
        android:paddingTop="12dp"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/zuixin_dizhi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/home_icon_drawable_padding"
            android:gravity="center"
            android:paddingTop="@dimen/home_icon_vertical_padding"
            android:paddingBottom="@dimen/home_icon_vertical_padding"
            android:text="@string/zuixin_dizhi"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_default"
            app:drawableTopCompat="@drawable/zuixin_dizhi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/zuixin_xinxi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/home_icon_drawable_padding"
            android:gravity="center"
            android:paddingTop="@dimen/home_icon_vertical_padding"
            android:paddingBottom="@dimen/home_icon_vertical_padding"
            android:text="@string/zuixin_xinxi"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_default"
            app:drawableTopCompat="@drawable/zuixin_xinxi"
            app:layout_constraintStart_toEndOf="@+id/zuixin_dizhi"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25"
            tools:ignore="SpUsage" />

        <!-- 多了一个`NEW`标签，没法用`drawableTop`了 -->
        <LinearLayout
            android:id="@+id/shangjia"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/home_icon_vertical_padding"
            android:paddingBottom="@dimen/home_icon_vertical_padding"
            app:layout_constraintStart_toEndOf="@+id/zuixin_xinxi"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/shangjia" />

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/home_icon_drawable_padding" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:text="@string/shangjia"
                android:textColor="@color/text_default"
                android:textSize="@dimen/text_default"
                app:drawableLeftCompat="@drawable/new_badge"
                tools:ignore="SpUsage" />
        </LinearLayout>

        <TextView
            android:id="@+id/fabu_xinxi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/home_icon_drawable_padding"
            android:gravity="center"
            android:paddingTop="@dimen/home_icon_vertical_padding"
            android:paddingBottom="@dimen/home_icon_vertical_padding"
            android:text="@string/fabu_xinxi"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_default"
            app:drawableTopCompat="@drawable/fabu_xinxi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shangjia"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25"
            tools:ignore="SpUsage" />

        <!-- 换行 -->

        <TextView
            android:id="@+id/vip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/home_icon_drawable_padding"
            android:gravity="center"
            android:paddingTop="@dimen/home_icon_vertical_padding"
            android:paddingBottom="@dimen/home_icon_vertical_padding"
            android:text="@string/vip"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_default"
            app:drawableTopCompat="@drawable/vip"
            app:layout_constraintStart_toStartOf="@+id/zuixin_dizhi"
            app:layout_constraintTop_toBottomOf="@+id/zuixin_dizhi"
            app:layout_constraintWidth_percent="0.25"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/shouji_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/home_icon_drawable_padding"
            android:gravity="center"
            android:paddingTop="@dimen/home_icon_vertical_padding"
            android:paddingBottom="@dimen/home_icon_vertical_padding"
            android:text="@string/shouji_app"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_default"
            app:drawableTopCompat="@drawable/shouji_app"
            app:layout_constraintStart_toEndOf="@+id/vip"
            app:layout_constraintTop_toTopOf="@+id/vip"
            app:layout_constraintWidth_percent="0.25"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/jifen_guize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/home_icon_drawable_padding"
            android:gravity="center"
            android:paddingTop="@dimen/home_icon_vertical_padding"
            android:paddingBottom="@dimen/home_icon_vertical_padding"
            android:text="@string/jifen_guize"
            android:textColor="@color/text_default"
            android:textSize="@dimen/text_default"
            app:drawableTopCompat="@drawable/jifen_guize"
            app:layout_constraintStart_toEndOf="@+id/shouji_app"
            app:layout_constraintTop_toTopOf="@+id/shouji_app"
            app:layout_constraintWidth_percent="0.25"
            tools:ignore="SpUsage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>